2014-02-25  Ulrich Drepper  <drepper@gmail.com>
	    Carlos O'Donell  <carlos@redhat.com>

	[BZ #16613]
	* elf/dl-tls.c (_dl_count_modids): New function.
	* sysdeps/generic/ldsodefs.h: Declare _dl_count_modids.
	* elf/rtld.c (dl_main): Call _dl_count_modids to track TLS usage in
	audit library and increment generation counter.
	(_dl_allocate_tls_init): Add assertion to check TLS generation count.
	* elf/tst-audit9.c: New file.
	* elf/tst-auditmod9a.c: New file.
	* elf/tst-auditmod9b.c: New file.
	* elf/Makefile: Add rules to build and run tst-audit9.

2014-02-25  Florian Weimer  <fweimer@redhat.com>

	[BZ #15347]
	* misc/sys/select.h (__FD_MASK): Avoid signed integer overflow.

2014-02-25  Will Newton  <will.newton@linaro.org>

	* sysdeps/arm/__longjmp.S: Include stap-probe.h.
	(__longjmp): Restore sp and lr before restoring callee
	saved registers.  Add longjmp and longjmp_target
	SystemTap probe point.
	* sysdeps/arm/bits/setjmp.h (__jmp_buf): Update comment.
	* sysdeps/arm/include/bits/setjmp.h (__JMP_BUF_SP):
	Define to zero to match jmpbuf layout.
	* sysdeps/arm/setjmp.S: Include stap-probe.h.
	(__sigsetjmp): Save sp and lr before saving callee
	saved registers.  Add setjmp SystemTap probe point.

2014-02-24  Stefan Liebler  <stli@linux.vnet.ibm.com>

	* sysdeps/s390/fpu/libm-test-ulps: Regenerate.

2014-02-24  Andreas Schwab  <schwab@suse.de>

	[BZ #15804]
	* elf/pldd.c (wait_for_ptrace_stop): New function.
	(main): Call it after attaching.

2014-02-22  Roland McGrath  <roland@hack.frob.com>

	* Makerules ($(common-objpfx)Versions.v.i): No longer depend
	on $(common-objpfx)abi-versions.h; using <shlib-compat.h> inside
	Versions files is now verboten.
	* hurd/Versions (libc: GLIBC_2.0):
	Remove various [SHLIB_COMPAT (libc, GLIBC_2_0, ...)] sections.
	(libc: HURD_CTHREADS_0.3): Remove conditionalization, was under
	[!SHLIB_COMPAT (libc, GLIBC_2_0, GLIBC_2_2)].
	* mach/Versions: Likewise.

	* csu/Versions: Remove unused %include.
	* resolv/Versions: Likewise.
